--- a/footer.css
+++ b/footer.css
@@ -1,10 +1,16 @@
 #container-footer {
   background-color: #06b2c5;
   width: 100%;
-  height: 600px;
+  height: 700px;
   padding: 80px;
 }
 @media screen and (max-width: 600px) {
+  #container-footer {
+    height: 1500px;
+    width: 115%;
+  }
+}
+@media screen and (max-width: 800px) {
   #container-footer {
     height: 1500px;
     width: 115%;
@@ -16,6 +22,9 @@
 #icon {
   text-decoration: none;
   padding: 5px;
+}
+.logo {
+  margin-right: 5rem;
 }
 #icons {
   margin-top: 2rem;
@@ -44,4 +53,14 @@ li {
 }
 .last-line {
   margin-top: 5rem;
+}
+@media screen and (max-width: 600px) {
+  #copyright {
+    margin-left: 0rem;
+  }
+}
+@media screen and (max-width: 600px) {
+  .last-line {
+    width: 100%;
+  }
 }
