--- a/footer.css
+++ b/footer.css
@@ -2,12 +2,18 @@
   background-color: #06b2c5;
   width: 100%;
   height: 700px;
-  padding: 80px;
+  padding-top: 80px;
 }
 @media screen and (max-width: 600px) {
   #container-footer {
     height: 1500px;
     width: 115%;
+  }
+}
+@media screen and (max-width: 600px) {
+  #container-footer {
+    margin: auto;
+    max-width: 100%;
   }
 }
 @media screen and (max-width: 800px) {
