setting the count part

--- a/about.css
+++ b/about.css
@@ -20,7 +20,8 @@
 }
 #cont {
   margin-top: 180px;
-  background-image: url(./image/BG.png);
+  background-image: url(./image/2.jpg);
+
   color: aliceblue;
   padding: 45px 15px;
 }
