--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3180,3 +3180,76 @@ background-color: white;
   font-size: 12px;
     font-weight: 400;
 }
+
+
+.countshead{
+  font-size: 34px;
+    font-family: 'Raleway';
+    font-weight: 600; 
+}
+
+
+.countshead2{
+  font-family: 'Raleway';
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 26px;
+}
+
+
+.numbers {
+  font-style: normal;
+  font-family: sans-serif;
+  font-weight: 700;
+  font-size: 38.6625px;
+  line-height: 52px;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+.cont {
+  margin-top: 80px;
+  background-image: url(../../assets/img/contsvg.svg);
+  color: aliceblue;
+  padding: 30px 30px;
+  max-width: 80%;
+  box-shadow: 20px 15px 20px 10px rgb(81 81 81 / 25%);
+  border-radius: 12px;
+
+}
+
+
+.pricingmain{
+  max-width: 70%;
+  margin: auto;
+}
+
+.headingprice{
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 27px;
+  line-height: 34px;
+  color: #182433;
+}
+
+
+.headingprice2{
+  font-family: 'Raleway';
+font-style: normal;
+font-weight: 400;
+font-size: 15px;
+line-height: 27px;
+color: #767D86;
+}
+
+
+.headingprice3 {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 30px;
+  margin-left: 19px;
+  color: #767D86;
+}
