--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,7 +286,7 @@ section {
 * Mobile Navigation 
 */
 .mobile-nav-toggle {
-  color: #ef946c;
+  color: #000000;
   font-size: 28px;
   cursor: pointer;
   display: none;
@@ -3262,3 +3262,138 @@ background-color: white;
   margin-left: 19px;
   color: #767D86;
 }
+
+.mainblock {
+  max-width: 40%;
+  margin: auto;
+  background: #FFFFFF;
+  box-shadow: 4px 4px 144px rgb(0 0 0 / 12%);
+  border-radius: 20px;
+  padding: 30px 30px;
+}
+
+.additional{
+  font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 34px;
+    color: #000000;
+}
+
+.addshort{
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 300;
+font-size: 14px;
+line-height: 20px;
+color: rgba(0, 0, 0, 0.8);
+
+}
+
+
+.wapp {
+  display: grid;
+  width: 150px;
+  padding: 30px 30px;
+  background: #FAFAFA;
+  justify-items: center;
+  border-radius: 12px;
+  margin-left: 20px;
+}
+
+
+.nameapp {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 30px;
+  margin-top: 14px;
+  text-align: center;
+  color: #676767;
+}
+
+
+.mainblock1 {
+  max-width: 60%;
+  margin: auto;
+  background: #FFFFFF;
+  box-shadow: 4px 4px 144px rgb(0 0 0 / 12%);
+  border-radius: 20px;
+  padding: 30px 30px;
+}
+
+
+.paymentbutton{
+  display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    background: #2C3779;
+    border-radius: 30px;
+    float: right;
+    border: 0px solid;
+    color: white;
+    padding: 20px 60px;
+    font-family: 'poppins';
+}
+
+@media screen and (max-width: 600px){ 
+.cont {
+  margin-top: 80px;
+  background: #2bb6c8;
+  color: aliceblue;
+  padding: 30px 30px;
+  max-width: 80%;
+  box-shadow: 20px 15px 20px 10px rgb(81 81 81 / 25%);
+  border-radius: 12px;
+  background-repeat: no-repeat;
+}
+}
+
+
+
+
+.joinwait{
+  max-width: 65%;
+  margin: auto;
+  background-image: url(../img/ctajoin.png);
+  background-size: cover;
+  padding: 50px 50px;
+  border-radius: 20px;
+
+}
+
+
+@media screen and (max-width: 600px){ 
+.joinwait {
+  max-width: 90%;
+  margin: auto;
+  background-image: url(../img/ctajoin.png);
+  background-size: cover;
+  padding: 50px 19px;
+  border-radius: 20px;
+}
+}
+
+.latestupdate{
+  font-family: 'Raleway';
+font-style: normal;
+font-weight: 800;
+font-size: 30px;
+line-height: 54px;
+color: white;
+}
+
+@media screen and (max-width: 600px){ 
+  .latestupdate{
+    font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 54px;
+  color: white;
+  }
+  }
