--- a/footer.css
+++ b/footer.css
@@ -128,3 +128,19 @@ input {
     background-size: cover;
   }
 }
+
+
+#basic-addon2 {
+  background-color: #233862;
+  color: white;
+  border-color: #233862;
+  box-shadow: 4px 4px 6px #2e2e2e;
+}
+
+/* #container-footer {
+  background-color: rgb(6, 178, 197);
+  width: 100%;
+  height: 700px;
+  padding-top: 190px;
+  margin-top: -200px;
+} */
