--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3397,3 +3397,161 @@ color: white;
   color: white;
   }
   }
+
+
+
+
+  @media screen and (max-width: 600px){ 
+    .mastername{
+      margin-top: 50px;
+    }
+  }
+
+
+
+  #container-footer {
+    background-color: #06b2c5;
+    width: 100%;
+    height: 700px;
+    padding-top: 80px;
+  }
+  @media screen and (max-width: 600px) {
+    #container-footer {
+      height: 1500px;
+      width: 115%;
+    }
+  }
+  @media screen and (max-width: 600px) {
+    #container-footer {
+      margin: auto;
+      max-width: 100%;
+    }
+  }
+  @media screen and (max-width: 800px) {
+    #container-footer {
+      height: 1500px;
+      width: 115%;
+    }
+  }
+  .logo-para {
+    margin-top: 10px;
+  }
+  #icon {
+    text-decoration: none;
+    padding: 5px;
+  }
+  .logo {
+    margin-right: 5rem;
+  }
+  #icons {
+    margin-top: 2rem;
+    margin-right: 2rem;
+  }
+  li {
+    list-style: none;
+    line-height: 38px;
+  }
+  #our-company-head {
+    margin-bottom: 2rem;
+  }
+  #policies {
+    margin-bottom: 2rem;
+  }
+  #reach-us {
+    margin-bottom: 2rem;
+  }
+  #tnc {
+    margin-right: 8rem;
+    float: right;
+  }
+  #copyright {
+    color: rgba(95, 87, 32, 0.756);
+    margin-left: 8rem;
+  }
+  .last-line {
+    margin-top: 5rem;
+  }
+  @media screen and (max-width: 600px) {
+    #copyright {
+      margin-left: 0rem;
+    }
+  }
+  @media screen and (max-width: 600px) {
+    .last-line {
+      width: 100%;
+    }
+  }
+  
+  #row {
+    background-image: url("./BGMask.svg");
+    background-repeat: no-repeat;
+    max-width: 100%;
+    margin: auto;
+    border-radius: 5px;
+    padding: 2rem;
+  }
+  #row-1 {
+    background-image: url("./Bg-1.svg");
+    background-repeat: no-repeat;
+    height: 12rem;
+    width: 15rem;
+    margin-left: 5rem;
+  }
+  #row-2 {
+    color: aliceblue;
+    font-size: large;
+    font-weight: bold;
+    display: inline-block;
+  }
+  input {
+    padding: 1rem;
+  }
+  #basic-addon2 {
+    background-color: #233862;
+    color: white;
+    border-color: #233862;
+  }
+  @media screen and (max-width: 600px) {
+    #row-1 {
+      background-image: url("./Bg-1.svg");
+      background-repeat: no-repeat;
+      height: 9rem;
+    }
+  }
+  @media screen and (max-width: 600px) {
+    #newsletter-1 {
+      margin-left: 0rem;
+    }
+  }
+  @media screen and (max-width: 600px) {
+    input {
+      padding: 0rem;
+    }
+  }
+  @media screen and (max-width: 600px) {
+    #row {
+      background-image: url("./BGMask.svg");
+  
+      height: 22rem;
+      width: 388px;
+      border-radius: 5px;
+      padding: 2rem;
+      background-size: cover;
+    }
+  }
+  
+  
+  #basic-addon2 {
+    background-color: #233862;
+    color: white;
+    border-color: #233862;
+    box-shadow: 4px 4px 6px #2e2e2e;
+  }
+  
+  /* #container-footer {
+    background-color: rgb(6, 178, 197);
+    width: 100%;
+    height: 700px;
+    padding-top: 190px;
+    margin-top: -200px;
+  } */
